--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Nicola Ladley</h1>
 
-    <img src="https://scontent-lht6-1.cdninstagram.com/v/t51.2885-19/s150x150/76894209_431793404168246_141343272017592320_n.jpg?_nc_ht=scontent-lht6-1.cdninstagram.com&_nc_ohc=ff6aePW4X8MAX_TckVE&oh=3ce6c214cb0f5b4a32ebcbb9858bb6d9&oe=5F4AAABD" alt="Nicola Ladley">
+    <p><img src="https://nicolaladley.files.wordpress.com/2020/06/ac1.jpg" alt="Nicola Ladley"></p>
 </body>
 </html>
