--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Nicola Ladley Profile</title>
 </head>
 <body>
     <h1>Nicola Ladley</h1>
+    <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="https://nicolaladley.files.wordpress.com/2020/06/ac1.jpg" class="img-fluid" alt="Responsive image">
+          </div>
+          <div class="col-sm">
+            Bio
+          </div>
+          <div class="col-sm">
+            <a href="https://codepen.io/nicolajc">Codepen</a>
+            <br>
+            <a href="https://github.com/nicola-jc">Github</a>
+          </div>
+        </div>
+      </div>
 
-    <p><img src="https://nicolaladley.files.wordpress.com/2020/06/ac1.jpg" alt="Nicola Ladley"></p>
+
+
 </body>
 </html>
