--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Mulish">
+    <link rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Raleway">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">   
     <title>Nicola Ladley Profile</title>
@@ -10,19 +14,19 @@
 <body>
     <header>
         <h1> Nicola Ladley </h1>
-      <br><div id="under-header">Online Portfolio</div>
+      <!-- <br><div id="under-header">Online Portfolio</div> -->
       </header>
       
       <div class="nav-bar">
-        <a class="active" href="#home">Home</a>
+        <a class="active" target="_blank" href="https://github.com/nicola-jc">Github</a>
         <svg width="5px" height="5px" viewBox="0 0 16 16" class="bi bi-circle-fill" fill="#ffa8a8" xmlns="http://www.w3.org/2000/svg">
         <circle cx="8" cy="8" r="8"/>
       </svg>
-        <a href="#about">About</a>
+        <a href="https://codepen.io/nicolajc" target="_blank" >Codepen</a>
         <svg width="5px" height="5px" viewBox="0 0 16 16" class="bi bi-circle-fill" fill="#ffa8a8" xmlns="http://www.w3.org/2000/svg">
         <circle cx="8" cy="8" r="8"/>
       </svg>
-        <a href="#blog">Blog</a>
+        <a href="https://twitter.com/nicola_jc" target="_blank" >Twitter</a>
         <svg width="5px" height="5px" viewBox="0 0 16 16" class="bi bi-circle-fill" fill="#ffa8a8" xmlns="http://www.w3.org/2000/svg">
         <circle cx="8" cy="8" r="8"/>
       </svg>
@@ -34,7 +38,7 @@
       <!--      <img src="https://nicolaladley.files.wordpress.com/2020/07/shoes-cropped.png"width=100% height=522px> -->
            <div id="header-cover"> <!-- header-cover opens -->
              <p class="image-text"><h1>Nicola Ladley</h1></p>
-        <p class="image-text">Online Portfolio for Introduction to Web Development Course</p>
+        <p class="image-text">Online Portfolio</p>
         <p class="image-text"><button type="button" class="btn btn-secondary">LEARN MORE</button></p>
            </div> <!-- header-cover closes -->
       </div> <!-- header-image closes -->
@@ -69,7 +73,7 @@
         <div id="contact">
           Get In Touch
           <p><ul>
-            <li>contact@nicola.com</li>
+            <li>nicolajchaplin@gmail.com</li>
           </ul></p>
         <p><a href="contact">More Ways To Get In Touch</a></p>
              </div>
